<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="#66FFCC" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Goede Doelen"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <FrameLayout
            android:layout_width="275dp"
            android:layout_height="150dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25dp"
            android:background="#FFFFFF" >

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="100dp"
                android:text="Doneer Nu" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="100dp"
                android:text="Info" />

            <EditText
                android:id="@+id/EditText01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="test tekst tekst tekst tekst tekst tekst" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="275dp"
            android:layout_height="150dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="190dp"
            android:background="#FFFFFF" >

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="100dp"
                android:text="Doneer Nu" />

            <EditText
                android:id="@+id/EditText02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="test tekst tekst tekst tekst tekst tekst" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="100dp"
                android:text="Info" />
        </FrameLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/frameLayout1"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="42dp"
        android:text="@string/account_titel"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/frameLayout1"
        android:layout_alignTop="@+id/textView1"
        android:src="@drawable/account48" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignRight="@+id/frameLayout1"
        android:text="@string/account_totaal"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignLeft="@+id/TextView01"
        android:text="@string/account_totaalbedrag"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>